<resources>
    <string name="app_name">GoogleBooksAPIGADS2020</string>
    <string name="error_loading_data">Error Loading data</string>
    <string name="title">Title</string>
    <string name="subtitle">SubTitle</string>
    <string name="isbn">ISBN</string>
    <string name="authors">Authors</string>
    <string name="publisherdate">publisherDate</string>
    <string name="publisher">Publisher</string>
    <string name="search">Search</string>
    <string name="advancedSearch">Advanced Search</string>
</resources>
