<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="100">
    <ImageView
        android:layout_width="0dp"
        android:layout_weight="15"
        android:src="@drawable/ic_menu_book_black_18dp"
        android:padding="8dp"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="85"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_textsize"
            android:text="@string/title"
            android:id="@+id/tv_title"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_textsize"
            android:text="@string/authors"
            android:id="@+id/tv_authors"
            android:textColor="@color/colorPrimaryDark"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:id="@+id/tv_publisher"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:text="@string/publisher"
                android:layout_height="wrap_content"
                android:layout_weight="70"/>
            <TextView
                android:layout_width="0dp"
                android:id="@+id/tv_publisherDate"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:paddingEnd="@dimen/pdatepadding"
                android:paddingRight="@dimen/pdatepadding"
                android:text="@string/publisherdate"
                android:layout_height="wrap_content"
                android:layout_weight="30"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>